--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 							<span>Константин</span>
 							<span>Константинопольский</span>
 						</a>
+						<button class="rollUp"><i class="icon-arrow-down"></i></button>
 					</div>
 
 					<div class="header-button-inn button-inn">
@@ -473,7 +474,7 @@
 								<div class="form-chekbox-wrap setting-form-wrap">
 
 									<div class="form-checkbox setting-form-checkbox active">
-										<label for="formCheckbox-0" class="form-checkbox__label setting-form-checkbox__label" data-placement="right" title="Этот пункт будет находится в подменю Системы >'"Ещ'"" data-toggle="tooltip">
+										<label for="formCheckbox-0" class="form-checkbox__label setting-form-checkbox__label" data-placement="right" title="Этот пункт будет находится в подменю Системы >'Ещё'" data-toggle="tooltip">
 											<input 
 												type="checkbox" 
 												id="formCheckbox-0" 
@@ -755,10 +756,6 @@
 							</ul>
 						</div>
 					</nav>						
-					<div class="box" style="height: 200px;margin: 10px 0;background-color: #000;"></div>
-					<div class="box" style="height: 200px;margin: 10px 0;background-color: #eee;"></div>
-					<div class="box" style="height: 200px;margin: 10px 0;background-color: #888;"></div>
-					<div class="box" style="height: 200px;margin: 10px 0;background-color: #aaa;"></div>
 				</aside>
 			</div>
 			<div class="col-xl-9">
@@ -818,15 +815,29 @@
 					</div>
 				</div>
 					
-				<div class="box" style="height: 410px;margin: 10px 0;background-color: #aaa;"></div>
-				<div class="box" style="height: 200px;margin: 10px 0;background-color: #888;"></div>
-				<div class="box" style="height: 410px;margin: 10px 0;background-color: #000;"></div>
-				<div class="box" style="height: 200px;margin: 10px 0;background-color: #eee;"></div>
+				
 			</div>
 		</div>		
 	</div>
 </section>			
 <!--/.content -->
+<div class="content-2">
+	<div class="container">
+		<div class="row">
+			<div class="col-xl-3">
+				<div class="box" style="height: 200px;margin: 10px 0;background-color: #000;"></div>
+				<div class="box" style="height: 200px;margin: 10px 0;background-color: #eee;"></div>
+				<div class="box" style="height: 200px;margin: 10px 0;background-color: #888;"></div>
+				<div class="box" style="height: 200px;margin: 10px 0;background-color: #aaa;"></div>
+			</div>
+			<div class="col-xl-9">
+				<div class="box" style="height: 410px;margin: 10px 0;background-color: #aaa;"></div>
+				<div class="box" style="height: 200px;margin: 10px 0;background-color: #888;"></div>
+				<div class="box" style="height: 410px;margin: 10px 0;background-color: #000;"></div>
+				<div class="box" style="height: 200px;margin: 10px 0;background-color: #eee;"></div>
+			</div>
+	</div>
+</div>
 <footer class="footer">
 	<div class="container">
 		
