--- a/index.html
+++ b/index.html
@@ -986,8 +986,8 @@
 					</div>
 				</div>
 				
-				<!-- VIDGET calendar -->
-				<div id="calendarVidgetBox" class="vidget-box calendar">
+				<!-- VIDGET vidget-calendar -->
+				<div id="calendarVidgetBox" class="vidget-box vidget-calendar">
 					
 					<div class="vidget-title">
 						КАЛЕНДАРЬ СОБЫТИЙ <button class="event-control"><i class="icon-arrow-down"></i></button>
@@ -1140,7 +1140,7 @@
 									</div>
 								</div>
 								<div class="vidget-content__right">
-									<div class="vidget-imgbox"><img src="img/vidget-img-05.jpg" alt="image"></div>
+									<div class="vidget-imgbox"><img src="img/vidget-img-05.png" alt="image"></div>
 								</div>
 							</div>
 						</div>
@@ -1175,7 +1175,7 @@
 				</div>
 
 				<!-- TABVIDGET -->
-				<div id="tabvidget" class="vidget-box vidget-tabbox">
+				<div id="tabvidget3" class="vidget-box vidget-tabbox">
 					<nav>
 						<div class="nav nav-tabs vidget-items" id="nav-tab" role="tablist">
 							<a class="nav-item vidget-item vidget-item_fixfirsttab" id="nav-contact-tab" data-toggle="tab" href="#vidget3-tab3" role="tab" aria-controls="vidget3-tab3" aria-selected="false">Акции в регионах</a> 
@@ -1184,7 +1184,7 @@
 					</nav>
 					<div class="tab-content vidget-tabs" id="nav-tabContent">
 						<div class="tab-pane vidget-tab fade" id="vidget3-tab3" role="tabpanel" aria-labelledby="nav-contact-tab">
-							<div class="vidget-content vidget-content_dblock">
+							<div class="vidget-content vidget-content_ads vidget-content_dblock">
 								<div class="vidget-title">
 									АКЦИИ В РЕГИОНАХ
 								</div>
@@ -1192,17 +1192,17 @@
 									<img src="img/vidget-img-09.jpg" alt="image">
 								</div>
 								<div class="vidget-text">
-									<p><strong>
+									<h4><strong>
 										Волонтеров берем на работу <br>
 										в первую очередь
-									</strong></p>
+									</strong></h4>
 									<p>Выкса</p>
 									<p>Сегодня 15:26</p>
 								</div>
 							</div>
 						</div>
 						<div class="tab-pane vidget-tab fade show active" id="vidget3-tab2" role="tabpanel" aria-labelledby="nav-profile-tab">
-							<div class="vidget-content vidget-content_dblock">
+							<div class="vidget-content vidget-content_ads vidget-content_dblock">
 								<div class="vidget-title">
 									ОБЪЯВЛЕНИЯ
 								</div>
@@ -1221,7 +1221,7 @@
 				</div>
 
 				<!-- VIDGET -->
-				<div class="vidget-box calendar">
+				<div class="vidget-box vidget-calendar">
 					<div class="vidget-title">
 						БЛАГОТВОРИТЕЛЬНОСТЬ
 					</div>
@@ -1231,7 +1231,7 @@
 				</div>
 
 				<!-- VIDGET -->
-				<div class="vidget-box calendar">
+				<div class="vidget-box vidget-calendar">
 					<div class="vidget-title">
 						КОНКУРСЫ
 					</div>
@@ -1244,6 +1244,8 @@
 					</div>							
 				</div>
 			</div>
+
+
 			<div class="col-xl-9">
 				<div class="content-group">
 
@@ -1264,10 +1266,6 @@
 												<option>Благовещенск</option>
 												<option>Альтемьевск</option>
 											</select>
-											<!-- <label for="filterDaterange" class="button button-o form-filters__label">
-												<input id="filterDaterange" class="form-filters__date" type="text" name="daterange" placeholder="Выберите период" autocomplete="off">
-												<i class="icon-arrow-down"></i>											
-											</label> -->
 											<input type="hidden" name="period_date_buffer" disabled>
 											<select id="filtersCalendarPeriod" class="button button-o form-select form-filters__select" name="period">
 												<option value="" disabled selected="selected">Выберите период</option>
@@ -1351,7 +1349,7 @@
 								</div>
 
 								<div class="card__title cardThird__title">
-									<a href="#">Насосно-компрессорные <br>трубы ТЭСЦ-1 <br>трубы ТЭСЦ-1</a>
+									<a href="#">Насосно-компрессорные <br>трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1 трубы ТЭСЦ-1</a>
 								</div>
 								<div class="card-date"><span>24 Сентября 2018</span></div>
 							</div>
@@ -4372,6 +4370,7 @@
 <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
 <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
 
+<script src="js/libs/jquery.dotdotdot.js"></script>
 
 <!-- Bootstrap -->
 <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
