--- a/calendar2.html
+++ b/calendar2.html
@@ -1054,20 +1054,20 @@
 						</table>
 					</div>
 					<div id="event-14" class="events">
-						<a href="calendar2.html#event1-14-10-2018" class="event">
+						<a href="calendar2.html#event-14-10-2018" class="event">
 							<div class="event-title"><span>1 День великого праздника в две строки</span></div>
 							<div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div>
 						</a>							
 						
-						<a href="calendar2.html#event2-14-10-2018" class="event">
+						<div class="event">
 							<div class="event-title"><span>2 День великого праздника в две строки</span></div>
 							<div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div>
-						</a>							
+						</div>							
 
-						<a href="calendar2.html#event3-14-10-2018" class="event">
+						<div class="event">
 							<div class="event-title"><span>3 День великого праздника в две строки</span></div>
 							<div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div>
-						</a>							
+						</div>							
 					</div>
 					<div id="event-6" class="events">
 						<a href="calendar.html#event1-06-10-2018" class="event">
@@ -1295,110 +1295,64 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td class="calendar__day">
-											<p>29</p>
-										</td>
-										<td class="calendar__day">
-											<p>30</p>
-										</td>
-										<td class="calendar__day">
-											<p>31</p>
-										</td>
-										<td class="calendar__day">
-											<p>1</p>
-										</td>
-										<td class="calendar__day">
-											<p>2</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>3</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>4</p>
-										</td>
+										<td class="calendar__day"><p>29</p></td>
+										<td class="calendar__day"><p>30</p></td>
+										<td class="calendar__day"><p>31</p></td>
+										<td class="calendar__day"><p>1</p></td>
+										<td class="calendar__day"><p>2</p></td>
+										<td class="calendar__day calendar__weekend"><p>3</p></td>
+										<td class="calendar__day calendar__weekend"><p>4</p></td>
 									</tr>
 									<tr>
-										<td class="calendar__day">
-											<p>5</p>
-										</td>
-										<td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" 
+										<td class="calendar__day"><p>5</p></td>
+										<td class="calendar__day"  data-placement="right" data-toggle="tooltip" data-html="true" 
 											title="<p>День металлурга</p> 
 														 <p>День поедателей йогуртов</p> 
 														 <p>День металлурга 2</p>">
-											<a href="#events-06-10-2018" class="calendar__link">
+											<a href="calendar.html#events-06-10-2018" class="calendar__link">
 												<p>6</p>
 												<span class="calendar__caption">3 события</span>
 											</a>
 										</td>
-										<td class="calendar__day">
-											<p>7</p>
-										</td>
-										<td class="calendar__day">
-											<p>8</p>
-										</td>
+										<td class="calendar__day"><p>7</p></td>
+										<td class="calendar__day"><p>8</p></td>
 										<td class="calendar__day">
 											<a href="#">
 												<p>9</p>												
 											</a>
 										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>10</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>11</p>
-										</td>
+										<td class="calendar__day calendar__weekend"><p>10</p></td>
+										<td class="calendar__day calendar__weekend"><p>11</p></td>
 									</tr>
 									<tr>
-										<td class="calendar__day">
-											<p>12</p>
-										</td>
-										<td class="calendar__day">
-											<p>13</p>
-										</td>
-										<td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" 
+										<td class="calendar__day"><p>12</p></td>
+										<td class="calendar__day"><p>13</p></td>
+										<td class="calendar__day"  data-placement="right" data-toggle="tooltip" data-html="true" 
 											title="<p>День металлурга</p> 
 														 <p>День поедателей йогуртов</p> 
 														 <p>День металлурга 2</p>">
-
-											<a href="calendar2.html#events-14-10-2018">
+											<a href="#events-14-10-2018">
 												<p>14</p>
 												<span class="calendar__caption">1 событие</span>
 											</a>
 										</td>
-										<td class="calendar__day calendar__day_special"><p>15</p>
-										</td>
-										<td class="calendar__day">
-											<p>16</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>17</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>18</p>
-										</td>
+										<td class="calendar__day calendar__day_special"><p>15</p></td>
+										<td class="calendar__day"><p>16</p></td>
+										<td class="calendar__day calendar__weekend"><p>17</p></td>
+										<td class="calendar__day calendar__weekend"><p>18</p></td>
 									</tr>
 									<tr>
-										<td class="calendar__day">
-											<p>19</p>
-										</td>
-										<td class="calendar__day">
-											<p>20</p>
-										</td>
-										<td class="calendar__day">
-											<p>21</p>
-										</td>
-										<td class="calendar__day">
-											<p>22</p>
-										</td>
+										<td class="calendar__day"><p>19</p></td>
+										<td class="calendar__day"><p>20</p></td>
+										<td class="calendar__day"><p>21</p></td>
+										<td class="calendar__day"><p>22</p></td>
 										<td class="calendar__day calendar__today">
 											<div> 
 												<p>23</p>
 												<span class="calendar__caption">Сегодня</span>
 											</div>
 										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>24</p>
-										</td>
+										<td class="calendar__day calendar__weekend"><p>24</p></td>
 										<td class="calendar__day calendar__weekend calendar__day_major">
 											<a href="#">
 												<p>25</p>
@@ -1413,36 +1367,24 @@
 												<span class="calendar__caption">4 события</span>
 											</a>
 										</td>
-										<td class="calendar__day">
-											<p>27</p>
-										</td>
-										<td class="calendar__day">
-											<p>28</p>
-										</td>
-										<td class="calendar__day">
-											<p>29</p>
-										</td>
-										<td class="calendar__day">
-											<p>30</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>1</p>
-										</td>
-										<td class="calendar__day calendar__weekend">
-											<p>2</p>
-										</td>
+										<td class="calendar__day"><p>27</p></td>
+										<td class="calendar__day"><p>28</p></td>
+										<td class="calendar__day"><p>29</p></td>
+										<td class="calendar__day"><p>30</p></td>
+										<td class="calendar__day calendar__weekend"><p>1</p></td>
+										<td class="calendar__day calendar__weekend"><p>2</p></td>
 									</tr>
 								</tbody>
 							</table>
 						</div>
 					</div>
 					
-					<div id="events-06-10-2018" class="card">
+					<div id="events-14-10-2018" class="card">
 						<div class="sign-title">
-							<p>События: 6 Ноября 2018</p>
+							<p>События: 14 Ноября 2018</p>
 						</div>
 					</div>
-					<article id="event1-06-10-2018" class="article">
+					<article id="event1-14-10-2018" class="article">
 						<div class="card">
 							<div class="content-title">
 								<div class="article-title content-titlebox">
@@ -1482,7 +1424,7 @@
 							</div>
 						</div>
 					</article>
-					<article id="event2-06-10-2018" class="article">
+					<article id="event2-14-10-2018" class="article">
 						<div class="card">
 							<div class="content-title">
 								<div class="article-title content-titlebox">
@@ -1505,11 +1447,11 @@
 							</div>
 						</div>
 					</article>
-					<article id="event3-06-10-2018" class="article">
+					<article id="event3-14-10-2018" class="article">
 						<div class="card">
 							<div class="content-title">
 								<div class="article-title content-titlebox">
-									<h3>День металлурга 2</h3>
+									<h3>День металлурга</h3>
 								</div>								
 							</div>
 							<div class="article-imgwrap">
