--- a/calendar3.html
+++ b/calendar3.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
-    <link href="css/style.css?v0.1.1" rel="stylesheet">
+    <link href="css/style.css?0.1.3" rel="stylesheet">
     <title>ОМК</title>
   </head>
   <body>
@@ -939,7 +939,7 @@
                             <p>23              </p>
                           </div>
                         </td>
-                        <td class="calendar__day calendar__weekend"><a href="calendar3.html#events-24-10-2018">
+                        <td class="calendar__day calendar__weekend" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День поедателей йогуртов&lt;/p&gt;"><a href="calendar3.html#events-24-10-2018">
                             <p>24</p><span class="calendar__caption">1 событие</span></a></td>
                         <td class="calendar__day calendar__weekend calendar__day_major"><a href="#">
                             <p>25</p><span class="calendar__caption">Важное событие</span></a></td>
@@ -1027,10 +1027,10 @@
       <script src="js/libs/validate/jquery.validate.min.js"></script>
       <script src="js/libs/jquery.maskedinput.min.js"></script>
       <!-- main script-->
-      <script src="js/main/main.js?v0.1.1"></script>
+      <script src="js/main/main.js?0.1.3"></script>
       <!--if lte IE 9
       link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
-      link(rel='stylesheet', href='ie9/css/style-ie9.css?v0.1.1')
+      link(rel='stylesheet', href='ie9/css/style-ie9.css')
       script(src='ie9/js/bootstrap-ie9.js')
       -->
     </div>
