--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
-    <link href="css/style.css?v0.1.1" rel="stylesheet">
+    <link href="css/style.css?0.1.3" rel="stylesheet">
     <title>ОМК</title>
   </head>
   <body>
@@ -3126,10 +3126,10 @@
       <script src="js/libs/validate/jquery.validate.min.js"></script>
       <script src="js/libs/jquery.maskedinput.min.js"></script>
       <!-- main script-->
-      <script src="js/main/main.js?v0.1.1"></script>
+      <script src="js/main/main.js?0.1.3"></script>
       <!--if lte IE 9
       link(href='ie9/css/bootstrap-ie9.css', rel='stylesheet')
-      link(rel='stylesheet', href='ie9/css/style-ie9.css?v0.1.1')
+      link(rel='stylesheet', href='ie9/css/style-ie9.css')
       script(src='ie9/js/bootstrap-ie9.js')
       -->
     </div>
