--- a/calendar.html
+++ b/calendar.html
@@ -905,7 +905,7 @@
                           <p>13</p>
                         </td>
                         <td class="calendar__day" data-placement="right" data-toggle="tooltip" data-html="true" title="&lt;p&gt;День металлурга&lt;/p&gt; 					&lt;p&gt;День поедателей йогуртов&lt;/p&gt; 					&lt;p&gt;День металлурга 2&lt;/p&gt;"><a href="calendar2.html#events-14-10-2018">
-                            <p>14</p><span class="calendar__caption">3 событие</span></a></td>
+                            <p>14</p><span class="calendar__caption">3 события</span></a></td>
                         <td class="calendar__day calendar__day_special">
                           <p>15</p>
                         </td>
