--- a/blocks.html
+++ b/blocks.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link href="css/style.css?0.1.3" rel="stylesheet">
-    <title>ОМК</title>
+    <title>Комбинированные блоки | ОМК</title>
   </head>
   <body>
     <header class="header">
@@ -960,14 +960,50 @@
                   </div>
                 </div>
                 <div class="card cardFull-head_special">
-                  <div class="tagbox">
-                    <div class="tag">
-                      <div class="card-date"><span>24 Сентября 2018</span></div>
+                  <div class="tag">
+                    <div class="card-date"><span>24 Сентября 2018</span></div>
+                  </div>
+                  <div class="like-card">
+                    <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                    <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                  </div>
+                </div>
+                <div class="card cardMin">
+                  <div class="cardMin__imgbox card__imgbox" style="background-image: url(img/block-img-01.jpg);">
+                    <div class="card-warning-text hide">
+                      <p></p>
                     </div>
-                    <div class="like-card">
-                      <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
-                      <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                  </div>
+                </div>
+                <div class="card cardMinOther">
+                  <div class="card__text cardMinOther__text">
+                    <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
+                    <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
+                  </div>
+                </div>
+                <div class="card cardMin">
+                  <div class="cardMin__imgbox card__imgbox" style="background-image: url(img/block-img-09.jpg);">
+                    <div class="card-warning-text hide">
+                      <p></p>
                     </div>
+                  </div>
+                </div>
+                <div class="card cardMinOther">
+                  <div class="card__text cardMinOther__text">
+                    <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p>
+                    <p>Литейно-прокатный комплекс - уникальное для России предприятие, в котором в единый технологический</p><a class="button card__more" href="#">Читать далее</a>
+                  </div>
+                </div>
+                <div class="card cardMin">
+                  <div class="cardMin__imgbox card__imgbox" style="background-image: url(img/block-img-04.jpg);">
+                    <div class="card-warning-text hide">
+                      <p></p>
+                    </div>
+                  </div>
+                </div>
+                <div class="card cardMinOther">
+                  <div class="card__text cardMinOther__text">
+                    <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке производства труб для нефтегазового комплекса.</p><a class="button card__more" href="#">Читать далее</a>
                   </div>
                 </div>
               </div>
