--- a/calendar3.html
+++ b/calendar3.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
     <link href="css/style.css?0.1.3" rel="stylesheet">
-    <title>ОМК</title>
+    <title>Календарь | ОМК</title>
   </head>
   <body>
     <header class="header">
