--- a/calendar.html
+++ b/calendar.html
@@ -984,7 +984,7 @@
                     </div>
                   </div>
                   <div class="article-imgwrap">
-                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/article-img-01.jpg);"></div>
+                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/news-twothirds-img-01.jpg);"></div>
                   </div>
                   <div class="article-quote">
                     <blockquote class="article-blockquote">«Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.</blockquote>
@@ -1004,7 +1004,7 @@
                     <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
                     <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
                   </div>
-                  <div class="article-autor">
+                  <div class="article-autor"><a class="hashtag" href="#">#Хэштэг</a>
                     <p>Автор статьи: Елена Мацинова</p>
                   </div>
                 </div>
@@ -1017,7 +1017,7 @@
                     </div>
                   </div>
                   <div class="article-imgwrap">
-                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/article-img-05.jpg);"></div>
+                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/news-twothirds-full-img-01.jpg);"></div>
                   </div>
                   <div class="article-quote">
                     <blockquote class="article-blockquote">Правило тут достаточно простое: чем меньше срок годности йогурта, тем он натуральнее. Так называемый «живой» йогурт может храниться при температуре 2-6 градусов Цельсия максимум 2-3 недели. Если же на упаковке указан большой срок годности (свыше 3-4 недель), то вряд в данном йогурте вряд ли содержаться полезные пробиотики. Ведь увеличить срок хранения йогурта можно только за счет его термообработки, в результате которой все полезные микроорганизмы погибают.</blockquote>
@@ -1039,7 +1039,7 @@
                     </div>
                   </div>
                   <div class="article-imgwrap">
-                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/article-img-01.jpg);"></div>
+                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/news-twothirds-img-01.jpg);"></div>
                   </div>
                   <div class="article-quote">
                     <blockquote class="article-blockquote">«Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.</blockquote>
