--- a/calendar3.html
+++ b/calendar3.html
@@ -984,7 +984,7 @@
                     </div>
                   </div>
                   <div class="article-imgwrap">
-                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/article-img-05.jpg);"></div>
+                    <div class="article-imgbox article-imgbox_full" style="background-image: url(img/news-twothirds-full-img-01.jpg);"></div>
                   </div>
                   <div class="article-quote">
                     <blockquote class="article-blockquote">Правило тут достаточно простое: чем меньше срок годности йогурта, тем он натуральнее. Так называемый «живой» йогурт может храниться при температуре 2-6 градусов Цельсия максимум 2-3 недели. Если же на упаковке указан большой срок годности (свыше 3-4 недель), то вряд в данном йогурте вряд ли содержаться полезные пробиотики. Ведь увеличить срок хранения йогурта можно только за счет его термообработки, в результате которой все полезные микроорганизмы погибают.</blockquote>
