--- a/calendar.html
+++ b/calendar.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.1.3" rel="stylesheet">
     <title>Календарь | ОМК</title>
   </head>
@@ -1004,7 +1006,7 @@
                     <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
                     <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
                   </div>
-                  <div class="article-autor"><a class="hashtag" href="#">#Хэштэг</a>
+                  <div class="article-autor"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
                     <p>Автор статьи: Елена Мацинова</p>
                   </div>
                 </div>
@@ -1025,9 +1027,6 @@
                   <div class="article-text">
                     <p>Если в названии или описании йогурта написано, что он термизированный или стерилизованный, то можно с уверенностью сказать, что данный продукт в ходе его производства подвергался термической обработке (это так называемый «неживой» йогурт). В процессе такой обработки погибли не только вредные, но и полезные микроорганизмы, так необходимые нашему организму. В результате чего срок годности такого йогурта может достигать 30 дней и более.</p>
                     <p>Однако хоть в ходе термообработки и погибают все полезные биологические культуры, «неживой» йогурт может принести определенную пользу вашему организму, ведь он богат белками, углеводами и жирами, витаминами и минералами.</p>
-                  </div>
-                  <div class="article-autor">
-                    <p>Автор статьи: Елена Мацинова</p>
                   </div>
                 </div>
               </article>
@@ -1058,7 +1057,7 @@
                     <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
                     <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
                   </div>
-                  <div class="article-autor">
+                  <div class="article-autor"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
                     <p>Автор статьи: Елена Мацинова</p>
                   </div>
                 </div>
@@ -1085,6 +1084,8 @@
       <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
       <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
       <script src="js/libs/jquery.dotdotdot.js"></script>
+      <!-- slick-->
+      <script src="slick/slick.min.js"></script>
       <!-- Bootstrap-->
       <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
       <script src="js/libs/jquery.actual.min.js"></script>
