--- a/blocks.html
+++ b/blocks.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.1.3" rel="stylesheet">
     <title>Комбинированные блоки | ОМК</title>
   </head>
@@ -1007,6 +1009,123 @@
                   </div>
                 </div>
               </div>
+              <!-- Текст-->
+              <article class="article cards">
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox_dark">
+                      <h4>Текст</h4>
+                    </div>
+                  </div>
+                  <div class="tag">
+                    <div class="card-date card-date_big"><span>24 Сентября 2018</span></div>
+                  </div>
+                  <div class="like-card">
+                    <button class="like-button comment-button"><i class="icon-comment"></i><span class="like-count">23</span></button>
+                    <button class="like-button"><i class="icon-like"></i><span class="like-count">1286</span></button>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="content-title">
+                    <div class="article-title content-titlebox">
+                      <h2>Более 10,6 млн тонн рулонного проката произвел литейно-прокатный комплекс ВМЗ за 10 лет работы</h2>
+                    </div>
+                  </div>
+                  <div class="article-quote">
+                    <blockquote class="article-blockquote">«Металлургия – базовая отрасль промышленности, одна из основных. Не развивая производство продукции из стали, не развивая производство листа, труб, колес для железнодорожных вагонов мы будем не конкурентоспособны. Такие предприятия, где используются современные технологии и оборудование, где оптимизированы все бизнес-процессы, где активно применяются цифровые технологии, позволяют развивать всю нашу промышленность. ВМЗ выпускает конкурентоспособную продукцию, аналогов которой в мире не так много. Можно только пожелать успехов предприятию, порадоваться за регион. Что еще важно: предприятие выполняет социальные обязательства, развивая территории, на которых оно работает», - отметил после посещения ВМЗ заместитель министра промышленности и торговли России Виктор Евтухов.</blockquote>
+                  </div>
+                  <div class="article-text">
+                    <p>Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке</p>
+                    <p>«Выксунский металлургический завод – не только один из крупнейших налогоплательщиков Нижегородской области, это еще яркий пример корпоративной социальной ответственности. Коллеги из ОМК показывают пример как необходимо взаимодействовать с местным самоуправлением, с региональными властями для того, чтобы жизнь выксунцев стала лучше. У компании много новых проектов развития производства в Выксе, вся необходимая поддержка от правительства области будет оказана», - сказал исполняющий обязанности заместителя губернатора, заместителя председателя Правительства Нижегородской области Игорь Носов.</p>
+                    <p>«Основной итог десятилетней работы ЛПК - возможность производить трубные марки стали самого ответственного назначения в самые короткие сроки. Сегодня по производственным показателям ЛПК является лучшим среди предприятий аналогичного класса в мире. Мы не стоим на месте, планируем увеличить объем производства на 20%, до 1,5 млн тонн проката в год, осваиваем новые марки стали, которые востребованы отечественной топливно-энергетической отраслью», - отметил председатель Совета директоров ОМК Анатолий Седых.</p>
+                  </div>
+                  <div class="article-text">
+                    <h3>СПРАВКА</h3>
+                    <p>Десятилетняя история литейно-прокатного комплекса – это история высоких достижений: только в течение нескольких последних лет коллектив ЛПК установил десятки производственных рекордов. Из года в год литейно-прокатный комплекс неизменно подтверждает статус одного из самых эффективных металлургических производств страны, объемы выпуска стали неоднократно превышали расчётную мощность комплекса.</p>
+                    <p>Сегодня в комплексе работает около 1200 сотрудников.</p>
+                  </div>
+                  <div class="article-autor"><a class="hashtag" href="#">#статья</a><a class="hashtag" href="#">#событие2019</a><a class="hashtag" href="#">#фамилия</a><a class="hashtag" href="#">#справочное_слово</a>
+                    <p>Автор статьи: Елена Мацинова</p>
+                  </div>
+                </div>
+              </article>
+              <!-- Логотипы или большие кнопки-->
+              <div class="cards">
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox_dark">
+                      <h4>Логотипы или большие кнопки</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox">
+                      <h2>Логотипы партнеров мероприятия</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="card cardFull-head_special">
+                  <div class="card-logos">
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                  </div>
+                </div>
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox">
+                      <h2>Логотипы дочерних предприятий компании</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="card cardFull-head_special">
+                  <div class="card-logos">
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                    <div class="card-logo"><a class="card-logo__imgbox"><img src="img/logo.png"></a></div>
+                  </div>
+                </div>
+              </div>
+              <!-- Блоки блога-->
+              <div class="cards">
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox_dark">
+                      <h4>Блоки блога</h4>
+                    </div>
+                  </div>
+                </div>
+                <div class="card cardFull-head_special">
+                  <div class="content-title">
+                    <div class="content-titlebox">
+                      <h2>Блоги 2018</h2>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="sliderBlog">
+                    <div class="sliderBlog-box">
+                      <div class="sliderBlog-item"></div>
+                    </div>
+                    <div class="sliderBlog-box">
+                      <div class="sliderBlog-item"></div>
+                    </div>
+                    <div class="sliderBlog-box">
+                      <div class="sliderBlog-item"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -1029,6 +1148,8 @@
       <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
       <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
       <script src="js/libs/jquery.dotdotdot.js"></script>
+      <!-- slick-->
+      <script src="slick/slick.min.js"></script>
       <!-- Bootstrap-->
       <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
       <script src="js/libs/jquery.actual.min.js"></script>
