--- a/calendar3.html
+++ b/calendar3.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.1.3" rel="stylesheet">
     <title>Календарь | ОМК</title>
   </head>
@@ -993,9 +995,6 @@
                     <p>Если в названии или описании йогурта написано, что он термизированный или стерилизованный, то можно с уверенностью сказать, что данный продукт в ходе его производства подвергался термической обработке (это так называемый «неживой» йогурт). В процессе такой обработки погибли не только вредные, но и полезные микроорганизмы, так необходимые нашему организму. В результате чего срок годности такого йогурта может достигать 30 дней и более.</p>
                     <p>Однако хоть в ходе термообработки и погибают все полезные биологические культуры, «неживой» йогурт может принести определенную пользу вашему организму, ведь он богат белками, углеводами и жирами, витаминами и минералами.</p>
                   </div>
-                  <div class="article-autor">
-                    <p>Автор статьи: Елена Мацинова</p>
-                  </div>
                 </div>
               </article>
             </div>
@@ -1020,6 +1019,8 @@
       <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
       <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
       <script src="js/libs/jquery.dotdotdot.js"></script>
+      <!-- slick-->
+      <script src="slick/slick.min.js"></script>
       <!-- Bootstrap-->
       <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
       <script src="js/libs/jquery.actual.min.js"></script>
