--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap-grid.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.structure.min.css">
     <link rel="stylesheet" href="jquery-ui-1.12.1.custom/jquery-ui.min.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
+    <link rel="stylesheet" href="slick/slick.css">
     <link href="css/style.css?0.1.3" rel="stylesheet">
     <title>ОМК</title>
   </head>
@@ -3112,6 +3114,8 @@
       <script src="jquery-ui-1.12.1.custom/datepicker-ru.js"></script>
       <script src="jquery-ui-1.12.1.custom/datepicker.extension.range.min.js"></script>
       <script src="js/libs/jquery.dotdotdot.js"></script>
+      <!-- slick-->
+      <script src="slick/slick.min.js"></script>
       <!-- Bootstrap-->
       <script src="js/libs/bootstrap/bootstrap.bundle.min.js"></script>
       <script src="js/libs/jquery.actual.min.js"></script>
