--- a/calendar3.html
+++ b/calendar3.html
@@ -622,7 +622,7 @@
                       <tr>
                         <td><a class="ui-state-deafult ui-state-week" href="#">04</a></td>
                         <td><a class="ui-state-default" href="#">19</a></td>
-                        <td class="ui-datepicker-today"><a class="ui-state-default" href="#">20</a></td>
+                        <td class="ui-datepicker-today selected"><a class="ui-state-default ui-state-active" href="#event-20">20</a></td>
                         <td><a class="ui-state-default" href="#">21</a></td>
                         <td><a class="ui-state-default" href="#">22</a></td>
                         <td><a class="ui-state-default" href="#">23</a></td>
@@ -642,13 +642,6 @@
                     </tbody>
                   </table>
                 </div>
-                <div class="events" id="event-14"><a class="event" href="calendar2.html#event1-14-10-2018">
-                    <div class="event-title"><span>1 День великого праздника в две строки</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event" href="calendar2.html#event2-14-10-2018">
-                    <div class="event-title"><span>2 День великого праздника в две строки</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event" href="calendar2.html#event3-14-10-2018">
-                    <div class="event-title"><span>3 День великого праздника в две строки</span></div>
-                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a></div>
                 <div class="events" id="event-6"><a class="event" href="calendar.html#event1-06-10-2018">
                     <div class="event-title"><span>День металлурга</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a><a class="event" href="calendar.html#event2-06-10-2018">
@@ -656,6 +649,16 @@
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a><a class="event" href="calendar.html#event3-06-10-2018">
                     <div class="event-title"><span>День металлурга 2</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-01.jpg);"></div></a></div>
+                <div class="events" id="event-14"><a class="event" href="calendar2.html#event1-14-10-2018">
+                    <div class="event-title"><span>1 День великого праздника в две строки</span></div>
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event" href="calendar2.html#event2-14-10-2018">
+                    <div class="event-title"><span>2 День великого праздника в две строки</span></div>
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a><a class="event" href="calendar2.html#event3-14-10-2018">
+                    <div class="event-title"><span>3 День великого праздника в две строки</span></div>
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/event-img-01.jpg);"></div></a></div>
+                <div class="events" id="event-20"><a class="event" href="calendar2.html#event1-24-10-2018">
+                    <div class="event-title"><span>День поедателей йогуртов</span></div>
+                    <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-02.jpg);"></div></a></div>
                 <div class="events" id="event-24"><a class="event" href="calendar2.html#event1-24-10-2018">
                     <div class="event-title"><span>День поедателей йогуртов</span></div>
                     <div class="vidget-imgbox vidget-imgbox_calendar" style="background-image: url(img/article-img-05.jpg);"></div></a></div>
